--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
+<div class="container">
+  <a (click)="openNotes()" class="m-5 btn btn-primary">Open Notes</a>
+
+</div>
+
 <router-outlet></router-outlet>
