--- a/src/app/featured-modules/notes/all-notes/all-notes.component.html
+++ b/src/app/featured-modules/notes/all-notes/all-notes.component.html
@@ -7,11 +7,11 @@
     <div class="col" *ngFor="let note of notes">
       <div class="card h-100">
         <div class="card-body">
-          <h5 class="card-title">{{note.title}}</h5>
-          <p class="card-text">{{note.content}}</p>
-          <p class="card-text">{{note.priority}}</p>
-          <p class="card-text">{{note.category}}</p>
-          <p class="card-text">{{note.tags}}</p>
+          <h5 class="card-title">{{note?.title}}</h5>
+          <p class="card-text">{{note?.content}}</p>
+          <p class="card-text">{{note?.priority}}</p>
+          <p class="card-text">{{note?.category}}</p>
+          <p class="card-text">{{note?.tags}}</p>
           <a (click)="openNote(note)" class="btn btn-success">{{btnText}}</a>
         </div>
       </div>
