--- a/src/app/featured-modules/notes/create-note/create-note.component.html
+++ b/src/app/featured-modules/notes/create-note/create-note.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container my-5">
   <h1 class="h1 my-4 text-center">Create Note</h1>
   <form class="form-control w-75 mx-auto" [formGroup]="note" (ngSubmit)="onSubmit()">
     <div class="mb-3">
