--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div class="container">
-  <a (click)="openNotes()" class="m-5 btn btn-primary">Open Notes</a>
+<app-nav-bar></app-nav-bar>
+
+<div class="container mt-lg-3 mt-md-2 mt-1">
+
+  <router-outlet></router-outlet>
 
 </div>
-
-<router-outlet></router-outlet>
