--- a/src/app/featured-modules/notes/show-note/show-note.component.html
+++ b/src/app/featured-modules/notes/show-note/show-note.component.html
@@ -1,1 +1,19 @@
-<p>show-note works!</p>
+<div class="container my-3">
+  <div class="notepad-icon">
+    <div class="spiral-rings"></div>
+    <div class="paper-lines"></div>
+    <div class="text-container">
+      <p class="notes-text">Tittle:</p>
+      <p class="notes-text">{{note.title}}</p>
+      <p class="notes-text">Content:</p>
+      <p class="notes-text">{{note.content}}</p>
+      <p class="notes-text">Priority:</p>
+      <p class="notes-text">{{note.priority}}</p>
+      <p class="notes-text">Category:</p>
+      <p class="notes-text">{{note.category}}</p>
+      <p class="notes-text">Tags:</p>
+      <p class="notes-text">{{note.tags}}</p>
+    </div>
+  </div>
+
+</div>
