--- a/src/app/core/access-denied/access-denied.component.html
+++ b/src/app/core/access-denied/access-denied.component.html
@@ -3,6 +3,7 @@
     <i class="fa fa-exclamation-triangle text-danger" style="font-size: 8rem;" aria-hidden="true"></i>
     <h3 class="h1 display-4 text-danger">Error 403 - Access Denied</h3>
     <p class="lead">You do not have permission to access this page.</p>
+    <p class="fst-italic">Server Message : {{backEndMessage}}</p>
     <a routerLink="/" class="btn btn-primary">Go Back Home</a>
   </div>
 </div>
