--- a/src/app/core/server-error/server-error.component.html
+++ b/src/app/core/server-error/server-error.component.html
@@ -3,6 +3,7 @@
     <i class="fa fa-exclamation-triangle text-danger" style="font-size: 8rem;" aria-hidden="true"></i>
     <h3 class="h1 mt-3">Error 500 - Server Error</h3>
     <p class="lead">Oops! Something went wrong. Please try again later.</p>
+    <p class="fst-italic">Server Message : {{backEndMessage}}</p>
     <a routerLink="/" class="btn btn-primary">Go Back Home</a>
   </div>
 </div>
