--- a/src/app/core/not-found/not-found.component.html
+++ b/src/app/core/not-found/not-found.component.html
@@ -3,6 +3,7 @@
     <i class="fa fa-exclamation-triangle text-danger" style="font-size: 8rem;" aria-hidden="true"></i>
     <h3 class="h1 display-4 text-danger">Error 404 - Page Not Found</h3>
     <p class="lead">Oops! The page you are looking for does not exist.</p>
+    <p class="fst-italic">Server Message : {{backEndMessage}}</p>
     <a routerLink="/" class="btn btn-primary">Go Back Home</a>
   </div>
 </div>
