--- a/src/app/core/session-expired/session-expired.component.html
+++ b/src/app/core/session-expired/session-expired.component.html
@@ -4,6 +4,7 @@
     <i class="fas fa-hourglass-end text-warning display-1"></i>
     <h3 class="mt-3 h1 text-danger">Session Expired</h3>
     <p class="text-muted">Your session has expired due to inactivity. Please log in again to continue.</p>
+    <p class="fst-italic">Server Message : {{backEndMessage}}</p>
     <a routerLink="/log-in" class="btn btn-primary"><i class="fa fa-sign-in" aria-hidden="true"></i> Log In Again</a>
   </div>
 
